[gd_scene load_steps=8 format=3 uid="uid://w0rry21wctdo"]

[ext_resource type="Script" path="res://scenes/join_screen.gd" id="1_lh0o5"]
[ext_resource type="Theme" uid="uid://d1fhtyedr8xvc" path="res://themes/main_theme.tres" id="1_vgv23"]
[ext_resource type="PackedScene" uid="uid://b05vf676xxuke" path="res://scenes/background.tscn" id="2_msaxu"]
[ext_resource type="Texture2D" uid="uid://bagjtqkqm0rpy" path="res://assets/back_arrow.svg" id="2_ok7s5"]
[ext_resource type="Theme" uid="uid://b1rxna748pd04" path="res://themes/icon_button.tres" id="3_huyin"]
[ext_resource type="Texture2D" uid="uid://bs4i73cdnq0gi" path="res://assets/copy_icon_white.svg" id="6_mxfrf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ss1nt"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 0.729412)

[node name="JoinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lh0o5")

[node name="Background" parent="." instance=ExtResource("2_msaxu")]
layout_mode = 1
metadata/_edit_lock_ = true

[node name="JoinInput" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 779.0
offset_top = 238.0
offset_right = 1228.0
offset_bottom = 304.0
theme = ExtResource("1_vgv23")
placeholder_text = "Enter Join code"

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 92.0
offset_right = 516.0
offset_bottom = 492.0
scale = Vector2(0.185, 0.185)
theme = ExtResource("3_huyin")
icon = ExtResource("2_ok7s5")
icon_alignment = 1

[node name="CopyJoinCode" type="Button" parent="."]
layout_mode = 0
offset_left = 1281.0
offset_top = 239.0
offset_right = 2019.0
offset_bottom = 953.0
scale = Vector2(0.084, 0.084)
theme = ExtResource("1_vgv23")
icon = ExtResource("6_mxfrf")
icon_alignment = 1

[node name="SubmitJoin" type="Button" parent="."]
layout_mode = 0
offset_left = 892.0
offset_top = 364.0
offset_right = 1115.0
offset_bottom = 422.0
theme = ExtResource("1_vgv23")
theme_override_styles/normal = SubResource("StyleBoxFlat_ss1nt")
text = "Join"

[connection signal="text_submitted" from="JoinInput" to="." method="_on_join_input_text_submitted"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="SubmitJoin" to="." method="_on_submit_join_pressed"]
